welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:4: error: type mismatch;
 found   : Unit
 required: Integer
  } else if (a==b) {
         ^